--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,25 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_messaging: ^14.2.5
   firebase_core: ^2.7.0
-
+  uuid:
+  yaml:
+  http:
+  retry:
+  permission_handler:
+  provider:
+  fluttertoast:
+  network_info_plus:
+  json_annotation:
+  localstorage:
+  flutter_secure_storage: ^8.0.0
+  intl: ^0.17.0
+  jwt_decode: ^0.3.1
+  pull_to_refresh: #^2.0.0
+  rxdart: ^0.27.7
+  flutter_local_notifications: ^13.0.0
+  device_info_plus: ^ 8.2.0
+  path_provider: ^2.0.14
+  timezone: ^0.9.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
